force-app/main/default/objects/Opportunity/fields/Account_Name_Expected_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Expected_Closure_Date__c</fullName>
    <formula>Account.Name &amp;&quot; || &quot;&amp;   CASE( MONTH(CloseDate ) , 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
&quot;December&quot;)&amp;&quot; - &quot; &amp; TEXT(YEAR(CloseDate )) &amp;&quot; || &quot;&amp;  TEXT(Probability*100)&amp;&quot;%&quot;</formula>
    <label>Account Name || Expected Closure Date||%</label>
    <type>Text</type>
</CustomField>