force-app/main/default/objects/Opportunity/fields/Accounting_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accounting Remarks</label>
    <type>TextArea</type>
</CustomField>