force-app/main/default/objects/Opportunity/fields/Agency_Proposed_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Agency_Proposed_Market_Share__c</fullName>
    <description>Agency partnerships (rename Proposed_Market_Share__c)</description>
    <inlineHelpText>This is the projected Dom market share as a result of the opportunity being realised.</inlineHelpText>
    <label>Proposed Market Share (Dom)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>