force-app/main/default/objects/Opportunity/fields/Assumed_Tag_Rate_at_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Assumed_Tag_Rate_at_Maturity__c</fullName>
    <description>This field is used to capture percentage values and can have up to 2 decimal points</description>
    <inlineHelpText>Tag rate at the height of program</inlineHelpText>
    <label>Assumed Tag Rate at Maturity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>