force-app/main/default/objects/Opportunity/fields/Auto_Create_Oppty_for_Con_renewal__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Oppty_for_Con_renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Created Opportunity</label>
    <type>Checkbox</type>
</CustomField>