force-app/main/default/objects/Opportunity/fields/Average_Spend_Per_Customer__c.field-meta.xml
<CustomField>
    <fullName>Average_Spend_Per_Customer__c</fullName>
    <description>Text field to capture dollar values. Values are captured up to 2 decimal points.Values are thousandth separated by commas (,)</description>
    <inlineHelpText>Estimated average annual spend of partnership</inlineHelpText>
    <label>Average Annual Spend Per Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>