force-app/main/default/objects/Opportunity/fields/Baseline_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Close_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Baseline Close Date</label>
    <type>Date</type>
</CustomField>