force-app/main/default/objects/Opportunity/fields/Baseline_QF_Spend__c.field-meta.xml
<CustomField>
    <fullName>Baseline_QF_Spend__c</fullName>
    <label>Baseline QF Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>