force-app/main/default/objects/Opportunity/fields/Baseline_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Baseline Start Date</label>
    <type>Date</type>
</CustomField>