force-app/main/default/objects/Opportunity/fields/Baseline_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Total_Revenue__c</fullName>
    <label>Baseline Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>