force-app/main/default/objects/Opportunity/fields/Bureaux__c.field-meta.xml
<CustomField>
    <fullName>Bureaux__c</fullName>
    <label>Bureaux</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adelaide Convention Bureau</fullName>
            </value>
            <value>
                <fullName>Brisbane Marketing</fullName>
            </value>
            <value>
                <fullName>Business Events Cairns and Great Barrier Reef</fullName>
            </value>
            <value>
                <fullName>Business Events Sunshine Coast</fullName>
            </value>
            <value>
                <fullName>Business Events Sydney</fullName>
            </value>
            <value>
                <fullName>Canberra Convention Bureau</fullName>
            </value>
            <value>
                <fullName>Gold Coast Tourism Corporation</fullName>
            </value>
            <value>
                <fullName>Melbourne Convention Bureau</fullName>
            </value>
            <value>
                <fullName>Northern Territory Convention Bureau</fullName>
            </value>
            <value>
                <fullName>Perth Convention Bureaux</fullName>
            </value>
            <value>
                <fullName>Tasmanian Convention Bureau</fullName>
            </value>
            <value>
                <fullName>Victoria (Regional)</fullName>
            </value>
            <value>
                <fullName>Whitsundays Marketing &amp; Development Ltd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>