force-app/main/default/objects/Opportunity/fields/Campaign_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Market_Share__c</fullName>
    <label>Campaign Market Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>