force-app/main/default/objects/Opportunity/fields/Campaign_QF_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Campaign_QF_Revenue__c</fullName>
    <label>Campaign QF Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>