force-app/main/default/objects/Opportunity/fields/Campaign_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Total_Revenue__c</fullName>
    <label>Campaign Total Air Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>