force-app/main/default/objects/Opportunity/fields/Carbon_Offset_Projects__c.field-meta.xml
<CustomField>
    <fullName>Carbon_Offset_Projects__c</fullName>
    <label>Carbon Offset Projects</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bespoke High Value Offset Portfolio</fullName>
            </value>
            <value>
                <fullName>Conserving Tasmania&apos;s Wilderness</fullName>
            </value>
            <value>
                <fullName>Empowering Rainforest Communities</fullName>
            </value>
            <value>
                <fullName>Improving Cambodian Air Quality</fullName>
            </value>
            <value>
                <fullName>Protecting the Peruvian Amazon</fullName>
            </value>
            <value>
                <fullName>Australian Offset Portfolio</fullName>
            </value>
            <value>
                <fullName>Australian and Asia Offset Portfolio</fullName>
            </value>
            <value>
                <fullName>Gold Standard Offset Portfolio</fullName>
            </value>
            <value>
                <fullName>100% China Offset Portfolio</fullName>
            </value>
            <value>
                <fullName>Sustainability &amp; Brand</fullName>
            </value>
            <value>
                <fullName>Sustainability</fullName>
            </value>
            <value>
                <fullName>Commodity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>