force-app/main/default/objects/Opportunity/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Quote or Contract type</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Airfares</fullName>
                <default>true</default>
                <label>Corporate Airfares</label>
            </value>
            <value>
                <fullName>Qantas Business Savings</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>FIFO Scheduled</fullName>
            </value>
            <value>
                <fullName>Spot Rate</fullName>
            </value>
            <value>
                <fullName>Preferred Rate</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Market Rate</fullName>
            </value>
            <value>
                <fullName>DPP Onboarding</fullName>
            </value>
            <value>
                <fullName>RB - Limited Availability Lanes</fullName>
            </value>
            <value>
                <fullName>RB - Special Lane Pricing</fullName>
            </value>
            <value>
                <fullName>RB - New Accounts Tier Assignment</fullName>
            </value>
            <value>
                <fullName>RB - Change in Tier Assignment</fullName>
            </value>
            <value>
                <fullName>RB - Spot Rates</fullName>
            </value>
            <value>
                <fullName>RB - Partner Rates</fullName>
            </value>
            <value>
                <fullName>Freighter</fullName>
            </value>
            <value>
                <fullName>Freighter - Spot Rates</fullName>
            </value>
            <value>
                <fullName>Freighter - SLP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>