force-app/main/default/objects/Opportunity/fields/Closed_Date_for_Reports__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date_for_Reports__c</fullName>
    <formula>CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Date for Reports</label>
    <type>Date</type>
</CustomField>