force-app/main/default/objects/Opportunity/fields/Closed_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reasons__c</fullName>
    <description>Used to record closed reasons. Mandatory when opportunity is closed.</description>
    <inlineHelpText>Select the reason(s) for opportunity closure.</inlineHelpText>
    <label>Closure Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Loyalty proposition</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Service (OTP/safety record/reliability)</fullName>
            </value>
            <value>
                <fullName>Alliance partnerships</fullName>
            </value>
            <value>
                <fullName>Premium product (aircraft / lounges)</fullName>
            </value>
            <value>
                <fullName>Value adds (valet, QF Club, etc.)</fullName>
            </value>
            <value>
                <fullName>Security of Supply</fullName>
            </value>
            <value>
                <fullName>Brand alignment</fullName>
            </value>
            <value>
                <fullName>Schedule (frequency / capacity)</fullName>
            </value>
            <value>
                <fullName>TMC influence</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Strong client / QF relationship</fullName>
            </value>
            <value>
                <fullName>with competitor</fullName>
            </value>
            <value>
                <fullName>High value</fullName>
            </value>
            <value>
                <fullName>Low value</fullName>
            </value>
            <value>
                <fullName>Protect commercial relationship</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Refer to other area</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Other commitments</fullName>
            </value>
            <value>
                <fullName>Not profitable</fullName>
            </value>
            <value>
                <fullName>High cost of sale</fullName>
            </value>
            <value>
                <fullName>Won&apos;t commit to QF contract terms</fullName>
            </value>
            <value>
                <fullName>Withdrawn by QF</fullName>
            </value>
            <value>
                <fullName>Opportunity for a volume deal</fullName>
            </value>
            <value>
                <fullName>Company operating environment</fullName>
            </value>
            <value>
                <fullName>Relevance to business eg. partner mix</fullName>
            </value>
            <value>
                <fullName>Switched to alternate product eg. Aquire</fullName>
            </value>
            <value>
                <fullName>Merger</fullName>
            </value>
            <value>
                <fullName>Aircraft availability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>