force-app/main/default/objects/Opportunity/fields/Competitor_Contract__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Account is currently contracted to a competitor</inlineHelpText>
    <label>Competitor Contract</label>
    <type>Checkbox</type>
</CustomField>