force-app/main/default/objects/Opportunity/fields/Current_Contracted_Cost_of_Sale_Percent__c.field-meta.xml
<CustomField>
    <fullName>Current_Contracted_Cost_of_Sale_Percent__c</fullName>
    <inlineHelpText>This is the agreed cost of sale shown in a % figure for the current financial year period</inlineHelpText>
    <label>Current Contracted Cost of Sale (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>