force-app/main/default/objects/Opportunity/fields/Current_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Current_Market_Share__c</fullName>
    <description>for Agency Partnerships</description>
    <inlineHelpText>This is the current Dom market share for the Parent, Sub brand or Agency</inlineHelpText>
    <label>Current Market Share (Dom)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>