force-app/main/default/objects/Opportunity/fields/Current_Market_Share_Int__c.field-meta.xml
<CustomField>
    <fullName>Current_Market_Share_Int__c</fullName>
    <inlineHelpText>This is the current Int market share for the Parent, Sub brand or Agency</inlineHelpText>
    <label>Current Market Share (Int)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>