force-app/main/default/objects/Opportunity/fields/Current_Required_Actions__c.field-meta.xml
<CustomField>
    <fullName>Current_Required_Actions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current/Required Actions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>