force-app/main/default/objects/Opportunity/fields/Current_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Revenue__c</fullName>
    <inlineHelpText>To be used to capture the current QF revenue of the account.</inlineHelpText>
    <label>Current QF Revenue</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>