force-app/main/default/objects/Opportunity/fields/Current_Revenue_IPR__c.field-meta.xml
<CustomField>
    <fullName>Current_Revenue_IPR__c</fullName>
    <description>Agency, information account managers</description>
    <inlineHelpText>This is the total combined Dom and Int Revenue sourced using IPR Reporting</inlineHelpText>
    <label>Current Revenue (IPR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>