force-app/main/default/objects/Opportunity/fields/Current_Revenue_Other_sources__c.field-meta.xml
<CustomField>
    <fullName>Current_Revenue_Other_sources__c</fullName>
    <description>Agency, information account managers</description>
    <inlineHelpText>This is the total combined Dom and Int Revenue sourced outside of QF Reporting Tools</inlineHelpText>
    <label>Current Revenue (Other sources)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>