force-app/main/default/objects/Opportunity/fields/Current_Revenue_Total__c.field-meta.xml
<CustomField>
    <fullName>Current_Revenue_Total__c</fullName>
    <description>Agency, information account managers</description>
    <inlineHelpText>This is the total combined Dom and Int Revenue for the Parent, Sub Brand or Agency</inlineHelpText>
    <label>Current Revenue (Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>