force-app/main/default/objects/Opportunity/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <description>Deal on a Page Current Status</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Deal on a page current status information</inlineHelpText>
    <label>Current Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>