force-app/main/default/objects/Opportunity/fields/Customer_Base__c.field-meta.xml
<CustomField>
    <fullName>Customer_Base__c</fullName>
    <description>This field is used to capture numbers.</description>
    <inlineHelpText>Size of the customer segment eligible for the proposition</inlineHelpText>
    <label>Customer Base</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>