force-app/main/default/objects/Opportunity/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Share</fullName>
            </value>
            <value>
                <fullName>Volume</fullName>
            </value>
            <value>
                <fullName>Token</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Acquisition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>