force-app/main/default/objects/Opportunity/fields/Estimated_Current_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Current_Market_Share__c</fullName>
    <description>To be used to capture the current market share estimate for the account.</description>
    <inlineHelpText>Most recent month&apos;s result available is shown</inlineHelpText>
    <label>Estimated Current Market Share %</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>