force-app/main/default/objects/Opportunity/fields/Estimated_Current_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Current_Revenue__c</fullName>
    <inlineHelpText>To be used to capture the current revenue estimate for the account.</inlineHelpText>
    <label>Estimated Current Revenue</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>