force-app/main/default/objects/Opportunity/fields/Estimated_Increment_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Increment_Market_Share__c</fullName>
    <formula>Proposed_Market_Share__c - Estimated_Current_Market_Share__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated estimate of the market share increment for the opportunity.</inlineHelpText>
    <label>Estimated Increment Market Share %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>