force-app/main/default/objects/Opportunity/fields/Estimated_Increment_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Increment_Revenue__c</fullName>
    <formula>Amount - Estimated_Current_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated estimate of the revenue increment for the opportunity.</inlineHelpText>
    <label>Estimated Increment Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>