force-app/main/default/objects/Opportunity/fields/Executive_summary__c.field-meta.xml
<CustomField>
    <fullName>Executive_summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Executive summary</label>
    <length>200</length>
    <type>Text</type>
</CustomField>