force-app/main/default/objects/Opportunity/fields/Expected_Amount_Technical__c.field-meta.xml
<CustomField>
    <fullName>Expected_Amount_Technical__c</fullName>
    <description>[QLSF-333] Loyalty: Used in Validation Rule &quot;Loyalty_Check_Points_Price&quot;. Technical field: Not to be used by users.</description>
    <formula>Customer_Base__c * Assumed_Tag_Rate_at_Maturity__c * Price_Per_Point__c * Points_Per__c * Average_Spend_Per_Customer__c * Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Amount (Technical)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>