force-app/main/default/objects/Opportunity/fields/Expected_Closure_Year__c.field-meta.xml
<CustomField>
    <fullName>Expected_Closure_Year__c</fullName>
    <formula>TEXT ( YEAR( CloseDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Closure Year</label>
    <type>Text</type>
</CustomField>