force-app/main/default/objects/Opportunity/fields/Forecast_Flight_Share_Domestic__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Flight_Share_Domestic__c</fullName>
    <label>Forecast Flight Share (Domestic)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>