force-app/main/default/objects/Opportunity/fields/Forecast_MCA_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Forecast_MCA_Revenue__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>Made Field Required based on CRM-5337 
Removed Required Field check -FCRM-956</description>
    <inlineHelpText>Including EK spend if joint customer</inlineHelpText>
    <label>Forecast MCA Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>