force-app/main/default/objects/Opportunity/fields/Freight_Actual_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>Freight_Actual_Shipment_Date__c</fullName>
    <description>Freight - To capture the date of the actual shipment</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date that the shipment was actually shipped</inlineHelpText>
    <label>Actual Shipment Date</label>
    <type>Date</type>
</CustomField>