force-app/main/default/objects/Opportunity/fields/Freight_Aircraft_Type__c.field-meta.xml
<CustomField>
    <fullName>Freight_Aircraft_Type__c</fullName>
    <description>Freight - To capture the type of aircraft to be used for this Opportunity</description>
    <inlineHelpText>Select &quot;combination&quot; if more than one aircraft type</inlineHelpText>
    <label>Aircraft Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Passenger QF</fullName>
                <default>true</default>
                <label>Passenger QF</label>
            </value>
            <value>
                <fullName>Freighter</fullName>
            </value>
            <value>
                <fullName>Interline</fullName>
            </value>
            <value>
                <fullName>Jetstar</fullName>
            </value>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Combination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>