force-app/main/default/objects/Opportunity/fields/Freight_Alert__c.field-meta.xml
<CustomField>
    <fullName>Freight_Alert__c</fullName>
    <description>Freight Big Deal Alert threshold</description>
    <label>Freight Alert</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30K</fullName>
            </value>
            <value>
                <fullName>20K</fullName>
            </value>
            <value>
                <fullName>10K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>