force-app/main/default/objects/Opportunity/fields/Freight_AWB_Number__c.field-meta.xml
<CustomField>
    <fullName>Freight_AWB_Number__c</fullName>
    <defaultValue>&quot;081-&quot;</defaultValue>
    <description>Freight - To record the AWB Number against an Opporrtunity</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Insert AWB number/s associated with this opportunity</inlineHelpText>
    <label>AWB Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>