force-app/main/default/objects/Opportunity/fields/Freight_AWB_Pieces__c.field-meta.xml
<CustomField>
    <fullName>Freight_AWB_Pieces__c</fullName>
    <description>Freight - Records the number of parcels associated with this AWB Number</description>
    <label>Pieces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>