force-app/main/default/objects/Opportunity/fields/Freight_AWB_Received__c.field-meta.xml
<CustomField>
    <fullName>Freight_AWB_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Freight - To indicate whether the Airway Bill has been received</description>
    <inlineHelpText>Tick when customer provides AWB number/s associated to this opportunity</inlineHelpText>
    <label>AWB Received</label>
    <type>Checkbox</type>
</CustomField>