force-app/main/default/objects/Opportunity/fields/Freight_AWB_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Freight_AWB_Unit_Type__c</fullName>
    <description>Freight - Captures the unit type of the parcel associated with the AWB Number entered</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>