force-app/main/default/objects/Opportunity/fields/Freight_AWB_Weight_Unit__c.field-meta.xml
<CustomField>
    <fullName>Freight_AWB_Weight_Unit__c</fullName>
    <description>Freight - Captures the weight unit ie, kg of the parcel associated with the AWB Number entered</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Weight Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>