force-app/main/default/objects/Opportunity/fields/Freight_Capacity_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Freight_Capacity_Forecast__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Freight Capacity Outlook</label>
    <referenceTo>Freight_Capacity_Forecast__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities_Outlook</relationshipName>
    <type>Lookup</type>
</CustomField>