force-app/main/default/objects/Opportunity/fields/Freight_Days_Since_Last_Created_Activity__c.field-meta.xml
<CustomField>
    <fullName>Freight_Days_Since_Last_Created_Activity__c</fullName>
    <formula>TODAY()- Freight_Last_Activity_Created_Date_Oppty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Days Since Last Created Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>